fixed icon highcontrast

--- a/src/Icon.module.scss
+++ b/src/Icon.module.scss
@@ -25,7 +25,7 @@
   &--accent {
     color: var(--color-accent-9);
   }
-  &.highContrast {
+  &--highContrast {
     color: var(--color-accent-12);
   }
 }
